@@ -11,10 +11,10 @@
                 }
             },
             "error": {
-                "checksum": "d41d8cd98f00b204e9800998ecf8427e",
                 "exception": {
                     "message": ""
-                }
+                },
+                "grouping_key": "d41d8cd98f00b204e9800998ecf8427e"
             },
             "processor": {
                 "event": "error",
