@@ -11,7 +11,7 @@
                 }
             },
             "error": {
-                "checksum": "d41d8cd98f00b204e9800998ecf8427e",
+                "grouping_key": "d41d8cd98f00b204e9800998ecf8427e",
                 "log": {
                     "message": ""
                 }
